# llmate.nvim

./: .gitignore  Makefile  README.md
cargo/backend/: Cargo.toml
cargo/backend/.cargo/: config.toml
cargo/backend/src/: lib.rs  models.rs
doc/: llmate.txt  tags
lua/: llmate.lua
lua/llmate/: backend.lua  config.lua  debug.lua  module.lua
plugin/: llmate.lua
